--- a/pin_keeper/pubspec.yaml
+++ b/pin_keeper/pubspec.yaml
@@ -2,6 +2,8 @@ name: pin_keeper
 description: A new Flutter project.
 
 dependencies:
+  redux: ^3.0.0
+  flutter_redux: ^0.5.0
   rxdart: ^0.16.0+2
   flutter:
     sdk: flutter
