--- a/pin_keeper/pubspec.yaml
+++ b/pin_keeper/pubspec.yaml
@@ -2,6 +2,7 @@ name: pin_keeper
 description: A new Flutter project.
 
 dependencies:
+  intl: ^0.15.4
   redux: ^3.0.0
   flutter_redux: ^0.5.0
   rxdart: ^0.16.0+2
@@ -12,7 +13,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   sqflite: ^0.8.7
-  path_provider: ^0.4.0
+  path_provider: ^0.4.1
 
 
 dev_dependencies:
