--- a/pin_keeper/pubspec.yaml
+++ b/pin_keeper/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
 
 
 dev_dependencies:
+  test: ^0.12.0
+  mockito: ">=2.2.0 <3.0.0"
   flutter_test:
     sdk: flutter
   flutter_driver:
