Adds loading symbol. Adds intial commit for firebase storage.
Fixed minor issues with andriod

--- a/pin_keeper/android/app/src/main/AndroidManifest.xml
+++ b/pin_keeper/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pinkeeper">
+    package="com.kkim.pinkeeper">
 
     <!-- The INTERNET permission is required for development. Specifically,
          flutter needs it to communicate with the running application
