--- a/pin_keeper/pubspec.yaml
+++ b/pin_keeper/pubspec.yaml
@@ -12,13 +12,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
-  sqflite: ^0.8.7
   path_provider: ^0.4.1
+  cloud_firestore: 0.7.4
 
 
 dev_dependencies:
-  test: ^0.12.0
-  mockito: ">=2.2.0 <3.0.0"
+  test: ^1.5.3
+  mockito: ^4.0.0
   flutter_test:
     sdk: flutter
   flutter_driver:
