--- a/pin_keeper/pubspec.yaml
+++ b/pin_keeper/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   path_provider: ^0.4.1
-  cloud_firestore: 0.7.4
+  firebase_auth: 0.5.19
+  firebase_database: ^0.4.6
 
 
 dev_dependencies:
