--- a/pin_keeper/pubspec.yaml
+++ b/pin_keeper/pubspec.yaml
@@ -13,8 +13,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   path_provider: ^0.4.1
-  firebase_auth: 0.5.19
-  firebase_database: ^0.4.6
+  firebase_auth: 0.7.0
+  firebase_database: 1.0.5
+  google_sign_in: 3.2.4
 
 
 dev_dependencies:
